# fast-api

./: .gitignore  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 6f49cb372252_create_users_table.py  707506c791e1_create_users_table.py  835992f41aa5_create_todos_table.py  92382b3d1e22_create_users_table.py  986443fb64c1_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
