pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath ='.'
addopts = '-p no:warnings'

[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"  
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.3.4"
alembic = "^1.13.2"
pyjwt = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}
tzdata = "^2024.1"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.format]
preview = true
quote-style = 'double'

[tool.taskipy.tasks]
run = 'fastapi dev fast_zero/app.py'
pretest = 'task lint'
post_test = 'coverage html'
test = 'pytest -s -x --cov=fast_zero -vv'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'